--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="h-animation">
-    <div class="h-letter">H</div>
+    <div class="h-letter">Handyman TJ</div>
   </div>
 
   <div id="site-content" style="display: none;">
