--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="h-animation">
-    <div class="h-letter">Handyman TJ</div>
+  <div id="text-animation">
+    <div class="animated-text">HandymanTJ</div>
   </div>
+  
+  <div id="pixel-overlay"></div>
 
-  <div id="site-content" style="display: none;">
+  <div id="site-content" style="visibility: hidden;">
+    <!-- Your entire original content remains exactly the same -->
     <header>
       <div class="logo">
         <img src="HandymanTJ.png" alt="Handyman TJ Logo">
