--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </head>
 <body>
   <div id="text-animation">
-    <div class="animated-text">HandymanTJ</div>
+    <div class="animated-text"><span class="handyman">Handyman</span><span class="tj">TJ</span></div>
   </div>
-  
-  <div id="pixel-overlay"></div>
 
-  <div id="site-content" style="visibility: hidden;">
+  <div id="site-content" style="opacity: 0;">
     <!-- Your entire original content remains exactly the same -->
     <header>
       <div class="logo">
