--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="WhatsApp.png" alt="WhatsApp" class="icon">
           </div>
           <div class="link-group">
-            <a href="" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
             <img src="Insta.png" alt="Instagram" class="icon">
           </div>
         </div>
@@ -176,9 +176,9 @@
     </section>
 
     <footer>
-      <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">sorbon.tj@gmail.com</a> | <a href="tel:+17186006278">+1 (718) 600-6278</a></p>
+      <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
       <div class="socials">
-        <a href="" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
         <a href="" target="_blank">WhatsApp</a>
         <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
       </div>
