--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </section>
 
     <footer>
-      <p>Contact Us: <a href="mailto:sorbon.tj@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
+      <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
       <div class="socials">
         <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
         <a href="" target="_blank">WhatsApp</a>
