--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   <title>Handyman TJ - New York</title>
   <link rel="icon" href="HandymanTJ.png" type="image/png">
   <link rel="stylesheet" href="style.css">
+  <!-- Added for insane effects -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
+  <!-- Added particle background -->
+  <div id="particles-js"></div>
+  
   <div id="text-animation">
     <div class="animated-text"><span class="handyman">Handyman</span><span class="tj">TJ</span></div>
   </div>
@@ -186,6 +191,10 @@
     </footer>
   </div>
 
+  <!-- Added for insane effects -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
