--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
   <title>Handyman TJ - New York</title>
   <link rel="icon" href="HandymanTJ.png" type="image/png">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-  <link rel="stylesheet" href="insane-effects.css">
 </head>
 <body>
-  <div id="particles-js"></div>
-
   <div id="text-animation">
     <div class="animated-text"><span class="handyman">Handyman</span><span class="tj">TJ</span></div>
   </div>
 
   <div id="site-content" style="opacity: 0;">
+    <!-- Your entire original content remains exactly the same -->
     <header>
       <div class="logo">
         <img src="HandymanTJ.png" alt="Handyman TJ Logo">
@@ -189,9 +186,6 @@
     </footer>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
