--- a/index.html
+++ b/index.html
@@ -3,198 +3,218 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Handyman TJ offers reliable handyman services in NYC, including carpentry, painting, and furniture assembly.">
+  <meta name="keywords" content="handyman, NYC, carpentry, painting, furniture assembly, Handyman TJ">
   <title>Handyman TJ - New York</title>
   <link rel="icon" href="HandymanTJ.png" type="image/png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <!-- Added for insane effects -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
-  <!-- Added particle background -->
-  <div id="particles-js"></div>
-  
-  <div id="text-animation">
-    <div class="animated-text"><span class="handyman">Handyman</span><span class="tj">TJ</span></div>
-  </div>
+  <header>
+    <div class="logo">
+      <img src="HandymanTJ.png" alt="Handyman TJ Logo">
+    </div>
+    <nav>
+      <div class="hamburger"><i class="fas fa-bars"></i></div>
+      <ul>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#gallery">Our Work</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="header-right">
+      <a href="tel:+12345678" class="phone">+1 (123) 56789</a>
+    </div>
+  </header>
 
-  <div id="site-content" style="opacity: 0;">
-    <!-- Your entire original content remains exactly the same -->
-    <header>
-      <div class="logo">
-        <img src="HandymanTJ.png" alt="Handyman TJ Logo">
+  <section class="hero" id="hero">
+    <video autoplay loop muted playsinline>
+      <source src="promo-video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="hero-overlay">
+      <div class="hero-text">
+        <h1>Making Your Home Perfect</h1>
+        <p>Your Trusted Handyman in NYC</p>
+        <a href="#contact" class="cta-button">Get a Free Quote</a>
       </div>
-      <div class="header-right">
-        <span class="location">NEW YORK</span>
-        <div class="contact-social">
-          <div class="link-group">
-            <a href="" target="_blank">WhatsApp</a>
-            <img src="WhatsApp.png" alt="WhatsApp" class="icon">
-          </div>
-          <div class="link-group">
-            <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
-            <img src="Insta.png" alt="Instagram" class="icon">
-          </div>
-        </div>
-      </div>
-    </header>
+    </div>
+  </section>
 
-    <section class="hero">
-      <div class="hero-overlay">
-        <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="hero-logo-center">
-        <div class="hero-text">
-          <h1>Making Your Home Perfect</h1>
-          <p>Your Trusted Handyman in NYC</p>
-        </div>
+  <section class="about" id="about">
+    <div class="about-content">
+      <div class="about-text">
+        <h2>We've Got You Covered</h2>
+        <p>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</p>
       </div>
-    </section>
+      <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
+    </div>
+  </section>
 
-    <section class="about">
-      <div class="about-content">
-        <div class="about-text">
-          <h2>We've Got You Covered</h2>
-          <h3>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</h3>
-        </div>
-        <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
+  <section class="services" id="services">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service">
+        <img src="Carpentary.png" alt="Carpentry">
+        <h3>Carpentry</h3>
+        <p>Custom shelves, door fixes, and more.</p>
       </div>
-    </section>
-
-    <section class="services">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <div class="service">
-          <img src="Carpentary.png" alt="Carpentry">
-          <h3>Carpentry</h3>
-          <p>Custom shelves, door fixes, and more.</p>
-        </div>
-        <div class="service">
-          <img src="Paint.png" alt="Painting">
-          <h3>Painting</h3>
-          <p>Interior and exterior painting services.</p>
-        </div>
-        <div class="service">
-          <img src="Assembly.png" alt="Handyman assembly">
-          <h3>Handyman assembly</h3>
-          <p>Assembling furniture, shelves, and more.</p>
-        </div>
-        <div class="service">
-          <img src="Caulking.png" alt="Handyman caulking">
-          <h3>Handyman caulking</h3>
-          <p>Sealing gaps around windows, doors, and fixtures.</p>
-        </div>
-        <div class="service">
-          <img src="DoorInstallation.png" alt="Door installation">
-          <h3>Door installation</h3>
-          <p>Installing interior and exterior doors.</p>
-        </div>
-        <div class="service">
-          <img src="DoorRepair.png" alt="Door repair">
-          <h3>Door repair</h3>
-          <p>Fixing squeaky hinges, broken knobs, and more.</p>
-        </div>
-        <div class="service">
-          <img src="DrywallInstallation.png" alt="Drywall installation or replacement">
-          <h3>Drywall installation or replacement</h3>
-          <p>Installing or replacing wallboard.</p>
-        </div>
-        <div class="service">
-          <img src="DrywallRepair.png" alt="Drywall repair">
-          <h3>Drywall repair</h3>
-          <p>Patching holes and fixing cracks in walls.</p>
-        </div>
-        <div class="service">
-          <img src="FloorInstallation.png" alt="Floor installation">
-          <h3>Floor installation</h3>
-          <p>Installing various types of flooring.</p>
-        </div>
-        <div class="service">
-          <img src="FloorRepair.png" alt="Floor repair">
-          <h3>Floor repair</h3>
-          <p>Fixing damaged or loose flooring.</p>
-        </div>
-        <div class="service">
-          <img src="GeneralInstallation.png" alt="General installation">
-          <h3>General installation</h3>
-          <p>Installing fixtures, shelves, and other items.</p>
-        </div>
-        <div class="service">
-          <img src="LightFixture.png" alt="Light fixture installation">
-          <h3>Light fixture installation</h3>
-          <p>Installing new or replacement light fixtures.</p>
-        </div>
-        <div class="service">
-          <img src="OutletInstallation.png" alt="Outlet installation">
-          <h3>Outlet installation</h3>
-          <p>Installing new electrical outlets.</p>
-        </div>
-        <div class="service">
-          <img src="OutletRepair.png" alt="Outlet repair">
-          <h3>Outlet repair</h3>
-          <p>Fixing faulty electrical outlets.</p>
-        </div>
-        <div class="service">
-          <img src="GeneralRepair.png" alt="Handyman repair">
-          <h3>Handyman repair</h3>
-          <p>General home repairs and maintenance.</p>
-        </div>
-        <div class="service">
-          <img src="TileInstallation.png" alt="Tile installation or replacement">
-          <h3>Tile installation or replacement</h3>
-          <p>Installing or replacing tiles in various areas.</p>
-        </div>
-        <div class="service">
-          <img src="WallPatching.png" alt="Wall patching">
-          <h3>Wall patching</h3>
-          <p>Repairing small holes and imperfections in walls.</p>
-        </div>
-        <div class="service">
-          <img src="WallFinishRepair.png" alt="Wall finish repair">
-          <h3>Wall finish repair</h3>
-          <p>Repairing paint, texture, and other wall finishes.</p>
-        </div>
-        <div class="service">
-          <img src="BathroomPainting.png" alt="Painting Bathroom insulation and repair">
-          <h3>Painting Bathroom insulation and repair</h3>
-          <p>Painting and addressing insulation/repair needs in bathrooms.</p>
-        </div>
-        <div class="service">
-          <img src="ShowerInstallation.png" alt="Shower installation and repair">
-          <h3>Shower installation and repair</h3>
-          <p>Installing and repairing showers.</p>
-        </div>
+      <div class="service">
+        <img src="Paint.png" alt="Painting">
+        <h3>Painting</h3>
+        <p>Interior and exterior painting services.</p>
       </div>
-    </section>
-
-    <section class="gallery">
-      <h2>Our Work</h2>
-      <div class="gallery-grid">
-        <img src="1.jpg" alt="Project 1">
-        <img src="2.jpg" alt="Project 2">
-        <img src="3.jpg" alt="Project 3">
-        <img src="4.jpg" alt="Project 4">
-        <img src="5.jpg" alt="Project 5">
-        <img src="6.jpg" alt="Project 6">
-        <img src="7.jpg" alt="Project 7">
-        <img src="8.jpg" alt="Project 8">
-        <img src="9.jpg" alt="Project 9">
-        <img src="10.jpg" alt="Project 10">
+      <div class="service">
+        <img src="Assembly.png" alt="Handyman assembly">
+        <h3>Handyman assembly</h3>
+        <p>Assembling furniture, shelves, and more.</p>
       </div>
-    </section>
-
-    <footer>
-      <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
-      <div class="socials">
-        <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
-        <a href="" target="_blank">WhatsApp</a>
-        <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
+      <div class="service">
+        <img src="Caulking.png" alt="Handyman caulking">
+        <h3>Handyman caulking</h3>
+        <p>Sealing gaps around windows, doors, and fixtures.</p>
       </div>
-      <p>&copy; 2025 Handyman TJ. All Rights Reserved.</p>
-    </footer>
-  </div>
+      <div class="service">
+        <img src="DoorInstallation.png" alt="Door installation">
+        <h3>Door installation</h3>
+        <p>Installing interior and exterior doors.</p>
+      </div>
+      <div class="service">
+        <img src="DoorRepair.png" alt="Door repair">
+        <h3>Door repair</h3>
+        <p>Fixing squeaky hinges, broken knobs, and more.</p>
+      </div>
+      <div class="service">
+        <img src="DrywallInstallation.png" alt="Drywall installation or replacement">
+        <h3>Drywall installation or replacement</h3>
+        <p>Installing or replacing wallboard.</p>
+      </div>
+      <div class="service">
+        <img src="DrywallRepair.png" alt="Drywall repair">
+        <h3>Drywall repair</h3>
+        <p>Patching holes and fixing cracks in walls.</p>
+      </div>
+      <div class="service">
+        <img src="FloorInstallation.png" alt="Floor installation">
+        <h3>Floor installation</h3>
+        <p>Installing various types of flooring.</p>
+      </div>
+      <div class="service">
+        <img src="FloorRepair.png" alt="Floor repair">
+        <h3>Floor repair</h3>
+        <p>Fixing damaged or loose flooring.</p>
+      </div>
+      <div class="service">
+        <img src="GeneralInstallation.png" alt="General installation">
+        <h3>General installation</h3>
+        <p>Installing fixtures, shelves, and other items.</p>
+      </div>
+      <div class="service">
+        <img src="LightFixture.png" alt="Light fixture installation">
+        <h3>Light fixture installation</h3>
+        <p>Installing new or replacement light fixtures.</p>
+      </div>
+      <div class="service">
+        <img src="OutletInstallation.png" alt="Outlet installation">
+        <h3>Outlet installation</h3>
+        <p>Installing new electrical outlets.</p>
+      </div>
+      <div class="service">
+        <img src="OutletRepair.png" alt="Outlet repair">
+        <h3>Outlet repair</h3>
+        <p>Fixing faulty electrical outlets.</p>
+      </div>
+      <div class="service">
+        <img src="GeneralRepair.png" alt="Handyman repair">
+        <h3>Handyman repair</h3>
+        <p>General home repairs and maintenance.</p>
+      </div>
+      <div class="service">
+        <img src="TileInstallation.png" alt="Tile installation or replacement">
+        <h3>Tile installation or replacement</h3>
+        <p>Installing or replacing tiles in various areas.</p>
+      </div>
+      <div class="service">
+        <img src="WallPatching.png" alt="Wall patching">
+        <h3>Wall patching</h3>
+        <p>Repairing small holes and imperfections in walls.</p>
+      </div>
+      <div class="service">
+        <img src="WallFinishRepair.png" alt="Wall finish repair">
+        <h3>Wall finish repair</h3>
+        <p>Repairing paint, texture, and other wall finishes.</p>
+      </div>
+      <div class="service">
+        <img src="BathroomPainting.png" alt="Painting Bathroom insulation and repair">
+        <h3>Painting Bathroom insulation and repair</h3>
+        <p>Painting and addressing insulation/repair needs in bathrooms.</p>
+      </div>
+      <div class="service">
+        <img src="ShowerInstallation.png" alt="Shower installation and repair">
+        <h3>Shower installation and repair</h3>
+        <p>Installing and repairing showers.</p>
+      </div>
+    </div>
+  </section>
 
-  <!-- Added for insane effects -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+  <section class="gallery" id="gallery">
+    <h2>Our Work</h2>
+    <div class="gallery-grid">
+      <img src="1.jpg" alt="Project 1">
+      <img src="2.jpg" alt="Project 2">
+      <img src="3.jpg" alt="Project 3">
+      <img src="4.jpg" alt="Project 4">
+      <img src="5.jpg" alt="Project 5">
+      <img src="6.jpg" alt="Project 6">
+      <img src="7.jpg" alt="Project 7">
+      <img src="8.jpg" alt="Project 8">
+      <img src="9.jpg" alt="Project 9">
+      <img src="10.jpg" alt="Project 10">
+    </div>
+  </section>
+
+  <section class="testimonials" id="testimonials">
+    <h2>What Our Clients Say</h2>
+    <div class="testimonials-grid">
+      <div class="testimonial">
+        <p>"Handyman TJ did an amazing job with my kitchen shelves. Professional and reliable!"</p>
+        <p class="author">- Sarah M., Brooklyn</p>
+      </div>
+      <div class="testimonial">
+        <p>"Their painting service transformed my apartment. Highly recommend!"</p>
+        <p class="author">- John D., Manhattan</p>
+      </div>
+      <div class="testimonial">
+        <p>"Fixed my door in no time. Great service and attention to detail!"</p>
+        <p class="author">- Emily R., Queens</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <form id="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Describe your project" required></textarea>
+      <button type="submit" class="cta-button">Send Message</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
+    <div class="socials">
+      <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://wa.me/+12345678" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank"><i class="fab fa-yelp"></i></a>
+    </div>
+    <p>&copy; <span id="year"></span> Handyman TJ. All Rights Reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
