--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
       </ul>
     </nav>
     <div class="header-right">
-      <a href="tel:+12345678" class="phone">+1 (123) 56789</a>
+      <span class="location">NEW YORK</span>
+      <div class="contact-social">
+        <div class="link-group">
+          <a href="" target="_blank">WhatsApp</a>
+          <img src="WhatsApp.png" alt="WhatsApp" class="icon">
+        </div>
+        <div class="link-group">
+          <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
+          <img src="Insta.png" alt="Instagram" class="icon">
+        </div>
+      </div>
     </div>
   </header>
 
@@ -209,7 +219,7 @@
     <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
     <div class="socials">
       <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://wa.me/+12345678" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="" target="_blank"><i class="fab fa-whatsapp"></i></a>
       <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank"><i class="fab fa-yelp"></i></a>
     </div>
     <p>&copy; <span id="year"></span> Handyman TJ. All Rights Reserved.</p>
