--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <section class="hero" id="hero">
     <video autoplay loop muted playsinline>
-      <source src="promo-video.mp4" type="video/mp4">
+      <source src="Kama_HEAD_2.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay">
@@ -242,4 +242,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
