--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <span class="location">NEW YORK</span>
       <div class="contact-social">
         <div class="link-group">
-          <a href="" target="_blank">WhatsApp</a>
-          <img src="WhatsApp.png" alt="WhatsApp" class="icon">
+          <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
+          <i class="fab fa-yelp icon"></i>
         </div>
         <div class="link-group">
           <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank">Instagram</a>
@@ -44,7 +44,7 @@
 
   <section class="hero" id="hero">
     <video autoplay loop muted playsinline>
-      <source src="Kama_HEAD_2.mp4" type="video/mp4">
+      <source src="promo-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay">
@@ -177,9 +177,9 @@
     <div class="video-scroller-container">
       <button class="scroll-btn left" onclick="scrollVideos(-1)"><i class="fas fa-chevron-left"></i></button>
       <div class="video-scroller">
-        <video class="video-item" src="Kama_HEAD_2.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
-        <video class="video-item" src="Kama_HEAD_1.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
-        <video class="video-item" src="Kama_HEAD_3.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="video1.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="video2.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="video3.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
       </div>
       <button class="scroll-btn right" onclick="scrollVideos(1)"><i class="fas fa-chevron-right"></i></button>
     </div>
@@ -242,5 +242,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
