--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
-    <form id="contact-form">
+    <form id="contact-form" action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <textarea name="message" placeholder="Describe your project" required></textarea>
@@ -242,4 +242,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
