--- a/index.html
+++ b/index.html
@@ -221,16 +221,21 @@
 
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
-    <form id="contact-form" action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="Describe your project" required></textarea>
-      <button type="submit" class="cta-button">Send Message</button>
+    <form action="https://formspree.io/f/mwpnjodo" method="POST">
+      <label>
+        Your email:
+        <input type="email" name="email" required>
+      </label>
+      <label>
+        Your message:
+        <textarea name="message" required></textarea>
+      </label>
+      <button type="submit">Send</button>
     </form>
   </section>
 
   <footer>
-    <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
+    <p>Contact Us: <a href="mailto:mrfreemanfreeland@gmail.com">mrfreemanfreeland@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
     <div class="socials">
       <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="" target="_blank"><i class="fab fa-whatsapp"></i></a>
