--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="hero-text">
         <h1>Making Your Home Perfect</h1>
         <p>Your Trusted Handyman in NYC</p>
-        <a href="#contact" class="cta-button">Get a Free Quote</a>
+        <a href="#contact" class="cta-button">Contact</a>
       </div>
     </div>
   </section>
@@ -247,4 +247,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
