--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="hero-text">
         <h1>Making Your Home Perfect</h1>
         <p>Your Trusted Handyman in NYC</p>
-        <a href="#contact" class="cta-button">Contact</a>
+        <a href="#contact" class="cta-button">Get a Free Quote</a>
       </div>
     </div>
   </section>
@@ -69,6 +69,11 @@
   <section class="services" id="services">
     <h2>Our Services</h2>
     <div class="services-grid">
+      <div class="service">
+        <img src="Assembly.png" alt="Furniture Assembly">
+        <h3>Furniture Assembly</h3>
+        <p>Expert assembly of furniture, including desks, beds, and shelving units, ensuring precision and durability.</p>
+      </div>
       <div class="service">
         <img src="Carpentary.png" alt="Carpentry">
         <h3>Carpentry</h3>
@@ -154,21 +159,6 @@
         <h3>Wall patching</h3>
         <p>Repairing small holes and imperfections in walls.</p>
       </div>
-      <div class="service">
-        <img src="WallFinishRepair.png" alt="Wall finish repair">
-        <h3>Wall finish repair</h3>
-        <p>Repairing paint, texture, and other wall finishes.</p>
-      </div>
-      <div class="service">
-        <img src="BathroomPainting.png" alt="Painting Bathroom insulation and repair">
-        <h3>Painting Bathroom insulation and repair</h3>
-        <p>Painting and addressing insulation/repair needs in bathrooms.</p>
-      </div>
-      <div class="service">
-        <img src="ShowerInstallation.png" alt="Shower installation and repair">
-        <h3>Shower installation and repair</h3>
-        <p>Installing and repairing showers.</p>
-      </div>
     </div>
   </section>
 
@@ -177,9 +167,9 @@
     <div class="video-scroller-container">
       <button class="scroll-btn left" onclick="scrollVideos(-1)"><i class="fas fa-chevron-left"></i></button>
       <div class="video-scroller">
-        <video class="video-item" src="Kama_HEAD_2.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
-        <video class="video-item" src="Kama_HEAD_1.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
-        <video class="video-item" src="Kama_HEAD_3.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="video1.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="video2.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="video3.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
       </div>
       <button class="scroll-btn right" onclick="scrollVideos(1)"><i class="fas fa-chevron-right"></i></button>
     </div>
@@ -221,7 +211,7 @@
 
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/mwpnjodo" method="POST">
+    <form action="https://formspree.io/f/xqadobzg" method="POST">
       <label>
         Your email:
         <input type="email" name="email" required>
@@ -235,7 +225,7 @@
   </section>
 
   <footer>
-    <p>Contact Us: <a href="mailto:mrfreemanfreeland@gmail.com">mrfreemanfreeland@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
+    <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
     <div class="socials">
       <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -247,5 +237,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
