--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h2>Our Services</h2>
     <div class="services-grid">
       <div class="service">
-        <img src="Assembly.png" alt="Furniture Assembly">
+        <img src="Furniture.png" alt="Furniture Assembly">
         <h3>Furniture Assembly</h3>
         <p>Expert assembly of furniture, including desks, beds, and shelving units, ensuring precision and durability.</p>
       </div>
@@ -237,3 +237,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
