--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
+    <h3>(Click)</h3>
     <form action="https://formspree.io/f/xqadobzg" method="POST">
       <label>
         Your email:
@@ -225,7 +226,7 @@
   </section>
 
   <footer>
-    <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> | <a href="tel:+12345678">+1 (123) 56789</a></p>
+    <p>Contact Us: <a href="mailto:handymantj.nyc@gmail.com">handymantj.nyc@gmail.com</a> |</p>
     <div class="socials">
       <a href="https://www.instagram.com/handymantj.com_nyc/?igsh=OWFia3lrcnBhcWNv&utm_source=qr#" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -237,4 +238,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
