--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
     <div class="video-scroller-container">
       <button class="scroll-btn left" onclick="scrollVideos(-1)"><i class="fas fa-chevron-left"></i></button>
       <div class="video-scroller">
-        <video class="video-item" src="video1.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
-        <video class="video-item" src="video2.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
-        <video class="video-item" src="video3.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="Kama_HEAD_2.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="Kama_HEAD_1.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
+        <video class="video-item" src="Kama_HEAD_3.mp4" loop muted playsinline onclick="playThisVideo(this)"></video>
       </div>
       <button class="scroll-btn right" onclick="scrollVideos(1)"><i class="fas fa-chevron-right"></i></button>
     </div>
@@ -238,5 +238,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
