--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 
   <section class="gallery" id="gallery">
     <h2>Our Work</h2>
+    <h3>(Click on videos)</h3>
     <div class="gallery-grid">
       <img src="1.jpg" alt="Project 1">
       <img src="2.jpg" alt="Project 2">
@@ -211,7 +212,7 @@
 
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
-    <h3>(Click)</h3>
+    <h3>(We will definitely receive your email.)</h3>
     <form action="https://formspree.io/f/xqadobzg" method="POST">
       <label>
         Your email:
@@ -238,6 +239,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
