--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <section class="videos" id="videos">
     <h2>Our Videos</h2>
-     <h3>(Click on videos)</h3>
+    <h3>(Click on videos)</h3>
     <div class="video-scroller-container">
       <button class="scroll-btn left" onclick="scrollVideos(-1)"><i class="fas fa-chevron-left"></i></button>
       <div class="video-scroller">
@@ -179,16 +179,26 @@
   <section class="gallery" id="gallery">
     <h2>Our Work</h2>
     <div class="gallery-grid">
-      <img src="1.jpg" alt="Project 1">
-      <img src="2.jpg" alt="Project 2">
-      <img src="3.jpg" alt="Project 3">
-      <img src="4.jpg" alt="Project 4">
-      <img src="5.jpg" alt="Project 5">
-      <img src="6.jpg" alt="Project 6">
-      <img src="7.jpg" alt="Project 7">
-      <img src="8.jpg" alt="Project 8">
-      <img src="9.jpg" alt="Project 9">
-      <img src="10.jpg" alt="Project 10">
+      <img src="1.png" alt="Project 1" onclick="showImage(this.src)">
+      <img src="2.png" alt="Project 2" onclick="showImage(this.src)">
+      <img src="3.png" alt="Project 3" onclick="showImage(this.src)">
+      <img src="4.png" alt="Project 4" onclick="showImage(this.src)">
+      <img src="5.png" alt="Project 5" onclick="showImage(this.src)">
+      <img src="6.png" alt="Project 6" onclick="showImage(this.src)">
+      <img src="7.png" alt="Project 7" onclick="showImage(this.src)">
+      <img src="8.png" alt="Project 8" onclick="showImage(this.src)">
+      <img src="9.png" alt="Project 9" onclick="showImage(this.src)">
+      <img src="10.png" alt="Project 10" onclick="showImage(this.src)">
+      <img src="11.png" alt="Project 11" onclick="showImage(this.src)">
+      <img src="12.png" alt="Project 12" onclick="showImage(this.src)">
+      <img src="13.png" alt="Project 13" onclick="showImage(this.src)">
+      <img src="14.png" alt="Project 14" onclick="showImage(this.src)">
+      <img src="15.png" alt="Project 15" onclick="showImage(this.src)">
+      <img src="16.png" alt="Project 16" onclick="showImage(this.src)">
+      <img src="17.png" alt="Project 17" onclick="showImage(this.src)">
+      <img src="18.png" alt="Project 18" onclick="showImage(this.src)">
+      <img src="19.png" alt="Project 19" onclick="showImage(this.src)">
+      <img src="20.png" alt="Project 20" onclick="showImage(this.src)">
     </div>
   </section>
 
@@ -239,8 +249,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
