--- a/index.html
+++ b/index.html
@@ -179,26 +179,26 @@
   <section class="gallery" id="gallery">
     <h2>Our Work</h2>
     <div class="gallery-grid">
-      <img src="1.png" alt="Project 1" onclick="showImage(this.src)">
-      <img src="2.png" alt="Project 2" onclick="showImage(this.src)">
-      <img src="3.png" alt="Project 3" onclick="showImage(this.src)">
-      <img src="4.png" alt="Project 4" onclick="showImage(this.src)">
-      <img src="5.png" alt="Project 5" onclick="showImage(this.src)">
-      <img src="6.png" alt="Project 6" onclick="showImage(this.src)">
-      <img src="7.png" alt="Project 7" onclick="showImage(this.src)">
-      <img src="8.png" alt="Project 8" onclick="showImage(this.src)">
-      <img src="9.png" alt="Project 9" onclick="showImage(this.src)">
-      <img src="10.png" alt="Project 10" onclick="showImage(this.src)">
-      <img src="11.png" alt="Project 11" onclick="showImage(this.src)">
-      <img src="12.png" alt="Project 12" onclick="showImage(this.src)">
-      <img src="13.png" alt="Project 13" onclick="showImage(this.src)">
-      <img src="14.png" alt="Project 14" onclick="showImage(this.src)">
-      <img src="15.png" alt="Project 15" onclick="showImage(this.src)">
-      <img src="16.png" alt="Project 16" onclick="showImage(this.src)">
-      <img src="17.png" alt="Project 17" onclick="showImage(this.src)">
-      <img src="18.png" alt="Project 18" onclick="showImage(this.src)">
-      <img src="19.png" alt="Project 19" onclick="showImage(this.src)">
-      <img src="20.png" alt="Project 20" onclick="showImage(this.src)">
+      <img src="1.jpg" alt="Project 1" onclick="showImage(this.src)">
+      <img src="2.jpg" alt="Project 2" onclick="showImage(this.src)">
+      <img src="3.jpg" alt="Project 3" onclick="showImage(this.src)">
+      <img src="4.jpg" alt="Project 4" onclick="showImage(this.src)">
+      <img src="5.jpg" alt="Project 5" onclick="showImage(this.src)">
+      <img src="6.jpg" alt="Project 6" onclick="showImage(this.src)">
+      <img src="7.jpg" alt="Project 7" onclick="showImage(this.src)">
+      <img src="8.jpg" alt="Project 8" onclick="showImage(this.src)">
+      <img src="9.jpg" alt="Project 9" onclick="showImage(this.src)">
+      <img src="10.jpg" alt="Project 10" onclick="showImage(this.src)">
+      <img src="11.jpg" alt="Project 11" onclick="showImage(this.src)">
+      <img src="12.jpg" alt="Project 12" onclick="showImage(this.src)">
+      <img src="13.jpg" alt="Project 13" onclick="showImage(this.src)">
+      <img src="14.jpg" alt="Project 14" onclick="showImage(this.src)">
+      <img src="15.jpg" alt="Project 15" onclick="showImage(this.src)">
+      <img src="16.jpg" alt="Project 16" onclick="showImage(this.src)">
+      <img src="17.jpg" alt="Project 17" onclick="showImage(this.src)">
+      <img src="18.jpg" alt="Project 18" onclick="showImage(this.src)">
+      <img src="19.jpg" alt="Project 19" onclick="showImage(this.src)">
+      <img src="20.jpg" alt="Project 20" onclick="showImage(this.src)">
     </div>
   </section>
 
@@ -249,3 +249,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
